--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                         <span class="category">Network Security</span>
                         <h4>DAMIDS</h4>
                         <div class="portfolio-links">
-                          <a href="assets/img/portfolio/DAMIDS.JPG" class="glightbox" title="DAMIDS: Distance and Mobility-Based Intrusion Detection System"><i class="bi bi-plus-lg"></i></a>
+                          <a href="assets/img/portfolio/damids00.jpg" class="glightbox" title="DAMIDS: Distance and Mobility-Based Intrusion Detection System"><i class="bi bi-plus-lg"></i></a>
                           <a href="damids.html" title="More Details"><i class="bi bi-arrow-right"></i></a>
                         </div>
                       </div>
