--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
                 <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-netsec">
                   <div class="portfolio-wrap">
-                    <img src="assets/img/portfolio/DAMIDS.JPG" class="img-fluid" alt="DAMIDS Image" loading="lazy">
+                    <img src="assets/img/portfolio/damids00.jpg" class="img-fluid" alt="DAMIDS Image" loading="lazy">
                     <div class="portfolio-info">
                       <div class="content">
                         <span class="category">Network Security</span>
