--- a/index.html
+++ b/index.html
@@ -262,13 +262,13 @@
 
                 <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-netsec">
                   <div class="portfolio-wrap">
-                    <img src="assets/img/portfolio/damids00.jpg" class="img-fluid" alt="DAMIDS Image" loading="lazy">
+                    <img src="assets/img/portfolio/Damids.png" class="img-fluid" alt="DAMIDS Image" loading="lazy">
                     <div class="portfolio-info">
                       <div class="content">
                         <span class="category">Network Security</span>
                         <h4>DAMIDS</h4>
                         <div class="portfolio-links">
-                          <a href="assets/img/portfolio/damids00.jpg" class="glightbox" title="DAMIDS: Distance and Mobility-Based Intrusion Detection System"><i class="bi bi-plus-lg"></i></a>
+                          <a href="assets/img/portfolio/Damids.png" class="glightbox" title="DAMIDS: Distance and Mobility-Based Intrusion Detection System"><i class="bi bi-plus-lg"></i></a>
                           <a href="damids.html" title="More Details"><i class="bi bi-arrow-right"></i></a>
                         </div>
                       </div>
