--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Hazel's Portfolio</title>
+  <title>Hazel's Portfolio</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -52,7 +52,6 @@
       </nav>
 
       <div class="social-links text-center">
-        <a href="https://facebook.com/therealhazelmendoza" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://github.com/hzlmndz"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/in/hmendoza018/" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
@@ -360,16 +359,6 @@
                       <div class="content">
                           <h4>LinkedIn</h4>
                           <a href="https://www.linkedin.com/in/hmendoza018/" target="_blank">linkedin.com/in/hmendoza018</a>
-                      </div>
-                    </div>
-
-                    <div class="info-item d-flex align-items-center">
-                      <div class="icon-box me-3">
-                          <i class="bi bi-instagram"></i>
-                      </div>
-                      <div class="content">
-                          <h4>Instagram</h4>
-                          <a href="https://instagram.com/_hzlmndza" target="_blank">@_hzlmndza</a>
                       </div>
                     </div>
                 </div>
