--- a/index.html
+++ b/index.html
@@ -229,13 +229,13 @@
 
                 <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-webdev">
                   <div class="portfolio-wrap">
-                    <img src="assets/img/portfolio/CampMate.png" class="img-fluid" alt="Portfolio Image" loading="lazy">
+                    <img src="assets/img/portfolio/CampMate.png" class="img-fluid" alt="CampMate Image" loading="lazy">
                     <div class="portfolio-info">
                       <div class="content">
                         <span class="category">Web Development</span>
                         <h4>CampMate</h4>
                         <div class="portfolio-links">
-                          <a href="assets/img/portfolio/Yelpcamp.png" class="glightbox" title="Yelpcamp"><i class="bi bi-plus-lg"></i></a>
+                          <a href="assets/img/portfolio/CampMate.png" class="glightbox" title="CampMate"><i class="bi bi-plus-lg"></i></a>
                           <a href="campmate.html" title="More Details"><i class="bi bi-arrow-right"></i></a>
                         </div>
                       </div>
@@ -388,7 +388,6 @@
         <h2>Hazel Mendoza</h2>
         
         <div class="social-links mb-3">
-          <a href="https://facebook.com/therealhazelmendoza" class="facebook"><i class="bi bi-facebook fs-3"></i></a>
           <a href="https://github.com/hzlmndz"><i class="bi bi-github fs-3"></i></a>
           <a href="https://www.linkedin.com/in/hmendoza018/" class="linkedin"><i class="bi bi-linkedin fs-3"></i></a>
         </div>   
